--- a/chatbot-backend/public/index.html
+++ b/chatbot-backend/public/index.html
@@ -204,7 +204,7 @@
       return `<strong>${name}</strong>`;
     }
 
-    const BACKEND_URL = "http://localhost:3000"; // Cambia a tu URL backend en producción
+    const BACKEND_URL = "https://tu-app.onrender.com"; // Cambia a tu URL backend en producción
 
     fetch(`${BACKEND_URL}/filosofos`)
       .then(r => r.json())
@@ -388,5 +388,6 @@
     });
   </script>
 </body>
+
 
 </html>
