--- a/chatbot-backend/public/editor.html
+++ b/chatbot-backend/public/editor.html
@@ -141,7 +141,7 @@
 <div id="status"></div>
 
 <script>
-  const BACKEND_URL = "http://localhost:3000"; // Cambia a URL backend en producción
+ const BACKEND_URL = "https://tu-app.onrender.com"; // Cambia a URL backend en producción
 
   // Estado local
   let filosofos = {};
@@ -374,4 +374,5 @@
 </script>
 
 </body>
+
 </html>
