--- a/chatbot-backend/public/editor.html
+++ b/chatbot-backend/public/editor.html
@@ -141,7 +141,7 @@
 <div id="status"></div>
 
 <script>
- const BACKEND_URL = "https://tu-app.onrender.com"; // Cambia a URL backend en producción
+ const BACKEND_URL = "https://chatbot-educativo-x3nn.onrender.com/"; // Cambia a URL backend en producción
 
   // Estado local
   let filosofos = {};
@@ -376,3 +376,4 @@
 </body>
 
 </html>
+
