--- a/chatbot-backend/public/index.html
+++ b/chatbot-backend/public/index.html
@@ -204,7 +204,7 @@
       return `<strong>${name}</strong>`;
     }
 
-    const BACKEND_URL = "https://tu-app.onrender.com"; // Cambia a tu URL backend en producción
+    const BACKEND_URL = "https://chatbot-educativo-x3nn.onrender.com/"; // Cambia a tu URL backend en producción
 
     fetch(`${BACKEND_URL}/filosofos`)
       .then(r => r.json())
@@ -391,3 +391,4 @@
 
 
 </html>
+
