--- a/chatbot-backend/public/index.html
+++ b/chatbot-backend/public/index.html
@@ -18,6 +18,22 @@
     * {
       box-sizing: border-box
     }
+    
+     nav {
+      background: #333;
+      padding: 10px;
+    }
+
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      margin-right: 15px;
+      font-weight: bold;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
+    }
 
     body {
       margin: 0;
@@ -165,6 +181,11 @@
       <button id="quiz">Quiz</button>
     </div>
   </div>
+
+  <nav>
+    <a href="index.html">Chatbot</a>
+    <a href="editor.html">Editor</a>
+  </nav>
 
   <script>
     // ---------- Estado ----------
@@ -391,6 +412,7 @@
 
 
 </html>
+
 
 
 
